--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
           name: Setup
           command: |
             apt-get update
-            apt-get install gcc-arm-none-eabi
+            apt-get install -y gcc-arm-none-eabi
       - run:
           name: Build
-          command: make
+          command: |
+            cd "Dive Computer"
+            make
