--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
           name: Setup
           command: |
             apt-get update
+            apt-get install -y build-essential
             apt-get install -y gcc-arm-none-eabi
       - run:
           name: Build
